--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,26 @@ version = "0.1.0"
 description = "Challenge for Powerflex dev position"
 authors = ["Jaime Jaramillo <jaimedario88@gmail.com>"]
 readme = "README.md"
-packages = [{include = "powerflex_challenge"}]
+packages = [{ include = "powerflex_challenge" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+django = "^4.2.4"
+djangorestframework = "^3.14.0"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.7.0"
+mypy = "^1.5.1"
+pylint = "^2.17.5"
+pylint-django = "^2.5.3"
+django-stubs = "^4.2.3"
+
+[tool.mypy]
+plugins = ["mypy_django_plugin.main"]
+
+[tool.django-stubs]
+django_settings_module = "config.settings"
 
 [build-system]
 requires = ["poetry-core"]
