Update on gitignore and pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,12 @@ djangorestframework = "^3.14.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
-mypy = "^1.5.1"
 pylint = "^2.17.5"
 pylint-django = "^2.5.3"
-django-stubs = "^4.2.3"
+django-stubs = { extras = ["compatible-mypy"], version = "^4.2.3" }
+djangorestframework-stubs = { extras = [
+    "compatible-mypy",
+], version = "^3.14.2" }
 
 [tool.mypy]
 plugins = ["mypy_django_plugin.main"]
