--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ include = "powerflex_challenge" }]
 python = "^3.10"
 django = "^4.2.4"
 djangorestframework = "^3.14.0"
+gunicorn = "^21.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
